<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AHRS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="Gyroscope">Gyroscope</string>
    <string name="Magnetic">Magnetic</string>
    <string name="Stop">Stop</string>
    <string name="Connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="State_Display">Sensor State</string>
    <string name="Ipadress">Enter Ipadress</string>
    <string name="Count">Count</string>
    <string name="MagCalibration">Mag</string>
    <string name="AccCalibration">Acc</string>
    <string name="GyroCalibration">Acc</string>
    <string name="Back">Back</string>
    <string name="GPS">GPS</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="Calibration">Calibration</string>
    <string name="Record">Record</string>
    <string name="Save">Save</string>
    <string name="Reset">Reset</string>

    <string name="button_scan">Scan for devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="scanning">scanning for devices。。。</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>


</resources>