<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/GyroCalibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calibration" />

        <Button
            android:id="@+id/Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save" />

        <Button
            android:id="@+id/Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Back" />

    </LinearLayout>

    <TextView
        android:id="@+id/GyroView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Gyroscope" />

</LinearLayout>